Adjust header, fix padding, increase gap, group selectors according to HTML

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
 
 /* header */
 .header {
-	padding: 10px 20%;
+	padding: 10px 200px 30px;
 	background-color: var(--darkBgClr);
 }
 
@@ -101,11 +101,11 @@ body {
 .hero-section {
 	margin: 60px 0;
 	display: flex;
-	justify-content: center;
-	gap: 20px;
+	gap: 50px;
 }
-.hero-text,
-.hero-img {
+
+.hero-img,
+.hero-text {
 	flex: 1;
 }
 
@@ -122,19 +122,13 @@ body {
 }
 
 .hero-text p {
-	flex: 1;
 	font-size: 18px;
 	color: var(--textLightClr);
-}
-
-.hero-img img {
-	height: 100%;
-	width: 100%;
-	border-radius: var(--borderRadius);
-	box-shadow: var(--boxShadow);
+	text-wrap: balance;
 }
 
 .btn-hero {
+	margin-top: 15px;
 	background-color: var(--lightBgClr);
 	border: 1px solid var(--lightBgClr);
 	color: var(--headingClr);
@@ -144,6 +138,13 @@ body {
 .btn-hero:hover {
 	color: var(--headingLightClr);
 	background-color: var(--darkBgClr);
+}
+
+.hero-img img {
+	height: 100%;
+	width: 100%;
+	border-radius: var(--borderRadius);
+	box-shadow: var(--boxShadow);
 }
 
 /* card container */
